--- a/drupal_module/sass/opeka.base.scss
+++ b/drupal_module/sass/opeka.base.scss
@@ -861,7 +861,7 @@ body.opeka-client {
         margin: 0 0 5px 15px;
       }
       span.screening-option {
-        line-height: 25px;
+        line-height: 1.5;
         padding-left: 8px;
       }
       .signin-footnote {
